# cppgui

./: .gitmodules  .rooignore  CMakeLists.txt  README.md  main.cpp  test.cpp
cmake/: findskia.cmake
include/: meta.h
modules/common/: CMakeLists.txt
modules/common/include/sdl_gui/common/: debug.h  magic_enum.hpp  refl_s.h  sdl_utils.h
modules/common/src/: debug.cpp  sdl_utils.cpp
modules/gui/: CMakeLists.txt
modules/gui/include/sdl_gui/: button.h  controller.h  ui.h  ui_group.h  ui_ref.h
modules/gui/include/sdl_gui/gui/: animation.h  animator.h  button.h  controller.h  events.h  float_number_ref.h  hover_checker.h  shadow_properties.h  shape.h  smooth_animator.h  spring_animator.h  ui.h  ui_factory.h  ui_group.h  ui_ref.h
modules/gui/src/: animation.cpp  animator.cpp  button.cpp  controller.cpp  hover_checker.cpp  shadow_properties.cpp  shape.cpp  smooth_animator.cpp  spring_animator.cpp  ui.cpp  ui_group.cpp  ui_ref.cpp
test/: shadow_test.cpp  test_app.cpp
